[openconnect] Fix crash in certificate error dialog

We create a dialog, put a widget in it, then exec that dialog, auto-delete it, then crash when deleting that widget

Instead of manually deleting the widget parent it to the dialog so that it gets deleted automatically

BUG: 461365